--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     
      <h1> Hello FED20D </h1>
-<div>test<div>
+     <div>test<div>
 
      <div> min kod </div>
+
+     <div>test 2</div>
 </body>
 </html>
