--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     
      <h1> Hello FED20D </h1>
-     <div>test<div>
+     <div id="test">test<div>
 
      <div> min kod </div>
+  
+     <div id="test">test 2</div>
 
-     <div>test 2</div>
 </body>
 </html>
