--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <body>
     
      <h1> Hello FED20D </h1>
-     <div id="test">test<div>
+     <div>test<div>
 
      <div> min kod </div>
-  
-     <div id="test">test 2</div>
 
+     <div>test 2</div>
 </body>
 </html>
