--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+
+
+
+
+    <nav>
+
+        <li></li>
+        <li></li>
+        <li></li>
+    </nav>
     
      <h1> Hello FED20D hello  </h1>
      <div>test<div>
+
+
 
      <div> min kod </div>
 
